--- a/DentalPlanet.Web/Views/Dentist/Index.cshtml
+++ b/DentalPlanet.Web/Views/Dentist/Index.cshtml
@@ -18,7 +18,7 @@
                     style="max-height: 200px; object-fit: cover;" />
 
                 <div class="card-body">
-                    <h5 class="card-title text-primary">@dentist.User.FirstName @dentist.User.LastName</h5>
+                    <h5 class="card-title text-primary">Dr. @dentist.User.FirstName @dentist.User.LastName</h5>
                     <p class="card-text">
                         <strong>Specialty:</strong> @dentist.Specialty<br />
                         <strong>Availability:</strong> @dentist.Availability<br />
