Finished the dentist logic

--- a/DentalPlanet.Web/Views/Dentist/Details.cshtml
+++ b/DentalPlanet.Web/Views/Dentist/Details.cshtml
@@ -17,7 +17,7 @@
 
                 <div class="card-body">
                     <h2 class="text-center text-primary mb-3">
-                        @Model.User.FirstName @Model.User.LastName
+                        Dr. @Model.User.FirstName @Model.User.LastName
                     </h2>
                     <hr class="mb-4" />
 
