--- a/DentalPlanet.Web/Views/Dentist/Delete.cshtml
+++ b/DentalPlanet.Web/Views/Dentist/Delete.cshtml
@@ -7,7 +7,7 @@
 <h2>Delete Dentist</h2>
 
 <div>
-    <h3>Are you sure you want to delete this dentist?</h3>
+    <h3>Are you sure you want to delete Dr. @Model.User.FirstName @Model.User.LastName</h3>
     <div>
         <dl class="row">
             <dt class="col-sm-2">Specialty</dt>
