styled the dentist index page

--- a/DentalPlanet.Web/Views/Dentist/Create.cshtml
+++ b/DentalPlanet.Web/Views/Dentist/Create.cshtml
@@ -11,19 +11,9 @@
     </div>
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2>Make User A Dentist</h2>
 
 <form asp-action="Create" method="post">
-    <div class="form-group">
-        <label for="Specialty">Specialty</label>
-        <input type="text" class="form-control" id="Specialty" name="Specialty" value="@Model?.Specialty" required />
-    </div>
-    
-    <div class="form-group">
-        <label for="Availability">Availability</label>
-        <input type="text" class="form-control" id="Availability" name="Availability" value="@Model?.Availability" />
-    </div>
-
     <div class="form-group">
         <label for="UserId">User</label>
         <select class="form-control" id="UserId" name="UserId">
@@ -35,6 +25,16 @@
                 }
             }
         </select>
+    </div>
+
+    <div class="form-group">
+        <label for="Specialty">Specialty</label>
+        <input type="text" class="form-control" id="Specialty" name="Specialty" value="@Model?.Specialty" required/>
+    </div>
+
+    <div class="form-group">
+        <label for="Availability">Availability</label>
+        <input type="text" class="form-control" id="Availability" name="Availability" value="@Model?.Availability"/>
     </div>
 
     <button type="submit" class="btn btn-primary mt-3">Create Dentist</button>
