--- a/DentalPlanet.Web/Views/Dentist/Index.cshtml
+++ b/DentalPlanet.Web/Views/Dentist/Index.cshtml
@@ -113,6 +113,12 @@
                                        class="btn btn-outline-danger">
                                         <i class="fas fa-trash me-1"></i> Delete
                                     </a>
+                                    <a asp-action="Create"
+                                       asp-controller="Appointment"
+                                       asp-route-dentistId="@dentist.Id"
+                                       class="btn btn-outline-success">
+                                        <i class="fas fa-calendar-plus me-1"></i> Book Appointment
+                                    </a>
                                 </div>
                             </div>
                         </div>
