--- a/DentalPlanet.Web/Views/Shared/_Layout.cshtml
+++ b/DentalPlanet.Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Dentist" asp-action="Index">Dentists</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Appointment" asp-action="Index">My Appointments</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
