--- a/DentalPlanet.Web/Views/Shared/_LoginPartial.cshtml
+++ b/DentalPlanet.Web/Views/Shared/_LoginPartial.cshtml
@@ -27,7 +27,7 @@
                asp-area="Identity"
                asp-page="/Account/Manage/Index"
                title="Manage">
-                Hello, @greeting <i class="fa-solid fa-user-doctor"></i>!
+                Hello, @greeting!
             </a>
         </li>
         <li class="nav-item">
